<resources>
    <string name="app_name">My Application</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="or_sign_up_with_social_account">Or sign up with social account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">back</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot password</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="not_a_valid_email_address_should_be_your_email_com">Not a valid email address. Should be your@email.com</string>
    <string name="favorites">Favorites</string>
    <string name="bag">Bag</string>
    <string name="shop">Shop</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="check">Check</string>
    <string name="fashion_nsale">Fashion\nsale</string>
    <string name="view_all">View all</string>
    <string name="super_summer_sale">Super summer sale</string>
    <string name="sale">Sale</string>
    <string name="your_have_never_seen_it_before">Your have never seen it before!</string>
    <string name="new1">New</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="_10">(10)</string>
    <string name="dollar_15">15$</string>
    <string name="dollar_12">12$</string>
    <string name="image_of_product">Image Of Product</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="_new">NEW</string>
    <string name="customer_name">Customer Name</string>
    <string name="august_13_2019">August 13, 2019</string>
    <string name="i_loved_this_dress_so_much_as_soon_as_i_tried_it_on_i_knew_i_had_to_buy_it_in_another_color_i_am_5_3_about_155lbs_and_i_carry_all_my_weight_in_my_upper_body_when_i_put_it_on_i_felt_like_it_thinned_me_put_and_i_got_so_many_compliments">I loved this dress so much as soon as I tried it on I knew I had to buy it in another color. I am 5\'3 about 155lbs and I carry all my weight in my upper body. When I put it on I felt like it thinned me put and I got so many compliments.</string>
    <string name="review_image">Review Image</string>
    <string name="order_no">Order No.</string>
    <string name="_05_12_2019">05-12-2019</string>
    <string name="tracking_number">Tracking number:</string>
    <string name="delivered">Delivered</string>
    <string name="details">Details</string>
    <string name="example_tracking_number">IW3475453455</string>
    <string name="example_order_number">1234567</string>
    <string name="quantity">Quantity:</string>
    <string name="example_quantity_number">3</string>
    <string name="example_total_amount">112$</string>
    <string name="total_amount">Total Amount:</string>
    <string name="helpful">Helpful</string>
    <string name="is_review_helpful">Is review helpful?</string>
    <string name="clickable_image_to_view_new_collection">Clickable Image To View New Collection</string>
    <string name="clickable_image_to_view_men_s_hoodies">Clickable Image To View Men\'s Hoodies</string>
    <string name="clickable_image_to_view_black_products">Clickable Image To View Black Products</string>
    <string name="clickable_image_to_view_summer_sale">Clickable Image To View Summer Sale</string>
    <string name="new_collection">New Collection</string>
    <string name="summer_sale">Summer\nSale</string>
    <string name="black">Black</string>
    <string name="men_s_hoodies">Men\'s Hoodies</string>
    <string name="image_of_fashion_sale">Image Of Fashion Sale</string>
    <string name="example_name">John Doe</string>
    <string name="Edit">Edit</string>
    <string name="_3_newbridge_court_chino_hills_ca_91709_united_states">3 Newbridge Court, Chino Hills, CA 91709, United States</string>
    <string name="use_as_the_shipping_address">Use as the shipping address</string>
    <string name="mypromocode2020">mypromocode2020</string>
    <string name="personal_offer">Personal offer</string>
    <string name="_6_days_remaining">6 days remaining</string>
    <string name="apply">Apply</string>
    <string name="percent_sign">%</string>
    <string name="off">off</string>
    <string name="number_10">10</string>
    <string name="image_of_bags_for_the_celebration_of_order_success">Image of bags for the celebration of order success</string>
    <string name="success">Success!</string>
    <string name="your_order_will_be_delivered_soon_thank_you_for_choosing_our_app">Your order will be delivered soon.\nThank you for choosing our app!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="finding_similar_results">Finding similar results...</string>
    <string name="_color">Color:</string>
    <string name="sample_color">Gray</string>
    <string name="sample_product_size">L</string>
    <string name="size">Size</string>
    <string name="reduce_product_quantity_by_1">Reduce product quantity by 1.</string>
    <string name="increase_product_quantity_by_1">Increase product quantity by 1</string>
    <string name="click_for_more_info_about_product">Click for more info about product</string>
    <string name="add_product_to_cart">Add product to cart</string>
    <string name="remove_product_from_favorites">Remove product from favorites</string>
</resources>