<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_outlined"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_cart_outlined"
        android:title="@string/shop" />

    <item
        android:id="@+id/nav_bag"
        android:icon="@drawable/ic_shopping_bag_outlined"
        android:title="@string/bag" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorites_outlined"
        android:title="@string/favorites" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_outlined"
        android:title="@string/profile" />
</menu>