<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGray"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            >

            <ImageView
                android:id="@+id/imgFashionSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_home_01"
                android:contentDescription="@string/image_of_fashion_sale"
                android:scaleType="centerCrop"
                android:layout_gravity="start|top"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:id="@+id/txtFashionSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/fashion_nsale"
                    android:textStyle="bold"
                    android:textSize="48sp"
                    android:lineSpacingMultiplier="0.8"
                    android:layout_marginBottom="20dp"
                    />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvBtnCheck"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryRed"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="start">

                    <Button
                        android:id="@+id/btnCheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/check"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/txtSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryDarkGray"
                    android:text="@string/sale"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    />

                <TextView
                    android:id="@+id/txtSuperSummerSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryDarkGray"
                    android:text="@string/super_summer_sale"
                    android:textSize="11sp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/txtViewAllSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryDarkGray"
                android:text="@string/view_all"
                android:textSize="11sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/txtNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryDarkGray"
                    android:text="@string/new1"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    />

                <TextView
                    android:id="@+id/txtYouHaveNeverSeenBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryDarkGray"
                    android:text="@string/your_have_never_seen_it_before"
                    android:textSize="11sp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/txtViewAllNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryDarkGray"
                android:text="@string/view_all"
                android:textSize="11sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <FrameLayout
                android:id="@+id/flNewCollection"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                >

                <ImageView
                    android:id="@+id/imgNewCollection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_home_02"
                    android:contentDescription="@string/clickable_image_to_view_new_collection"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:id="@+id/txtNewCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/new_collection"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flSummerSale"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flNewCollection"
                app:layout_constraintEnd_toStartOf="@id/flMensHoodies"
                app:layout_constraintDimensionRatio="1:1"
                >

                <ImageView
                    android:id="@+id/imgSummerSale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/white"
                    android:contentDescription="@string/clickable_image_to_view_summer_sale"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:id="@+id/txtSummerSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryRed"
                    android:text="@string/summer_sale"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flBlack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flSummerSale"
                app:layout_constraintEnd_toStartOf="@id/flMensHoodies"
                app:layout_constraintDimensionRatio="1:1"
                >

                <ImageView
                    android:id="@+id/imgBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_home_04"
                    android:contentDescription="@string/clickable_image_to_view_black_products"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:id="@+id/txtBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/black"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    android:layout_gravity="start|bottom"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="20dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flMensHoodies"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/flSummerSale"
                app:layout_constraintTop_toBottomOf="@id/flNewCollection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:2"
                >

                <ImageView
                    android:id="@+id/imgMensHoodies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_home_03"
                    android:contentDescription="@string/clickable_image_to_view_men_s_hoodies"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:id="@+id/txtMensHoodies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/men_s_hoodies"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"
                    />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>