<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/white"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >

            <LinearLayout
                android:id="@+id/liloOrderFirstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryDarkGray"
                        android:text="@string/order_no"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginEnd="5dp"
                        />

                    <TextView
                        android:id="@+id/txtOrderNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryDarkGray"
                        android:text="@string/example_order_number"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtOrderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryMediumGray"
                    android:text="@string/_05_12_2019"
                    android:textSize="14sp"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LiloTrackingNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/liloOrderFirstRow"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryMediumGray"
                    android:text="@string/tracking_number"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    />

                <TextView
                    android:id="@+id/txtTrackingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryDarkGray"
                    android:text="@string/example_tracking_number"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/liloOrderThirdRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_below="@id/LiloTrackingNumber"
                android:layout_marginTop="5dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryMediumGray"
                        android:text="@string/quantity"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        />

                    <TextView
                        android:id="@+id/txtQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryDarkGray"
                        android:text="@string/example_quantity_number"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryMediumGray"
                        android:text="@string/total_amount"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        />

                    <TextView
                        android:id="@+id/txtTotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryDarkGray"
                        android:text="@string/example_total_amount"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/liloOrderThirdRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                >

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/txtDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryDarkGray"
                        android:text="@string/details"
                        android:textSize="14sp"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingStart="25dp"
                        android:paddingEnd="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/background_border_details"
                        />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryGreen"
                    android:text="@string/delivered"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>