<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/screenStart"
    android:background="@color/primaryGray"
    tools:context=".OrderSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/img_success_bag"
            android:contentDescription="@string/image_of_bags_for_the_celebration_of_order_success"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="100dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryDarkGray"
            android:text="@string/success"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryDarkGray"
            android:text="@string/your_order_will_be_delivered_soon_thank_you_for_choosing_our_app"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:layout_marginBottom="150dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryRed"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            >

            <Button
                android:id="@+id/btnContinueShopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/continue_shopping"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>