<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/screenStart"
    android:background="@color/primaryGray"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:onClick="finishCurrentActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryDarkGray"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textSize="34sp"
            android:layout_marginBottom="80dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryDarkGray"
            android:text="@string/please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="start"
            android:lineSpacingMultiplier="1.5"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryMediumGray"
                    android:text="@string/email"
                    android:textSize="11sp"
                    android:layout_marginBottom="5dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:textColor="@color/textDarkGray"
                    android:textSize="14sp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryRed"
            android:text="@string/not_a_valid_email_address_should_be_your_email_com"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:visibility="gone"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryRed"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:layout_marginTop="40dp"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="14sp"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>